# dashboard

.github/workflows/: main.yml  web-publish.yml  web-test-build.yml
sdl3/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
sdl3/libs/: CMakeLists.txt
sdl3/libs/sdl_glue/: CMakeLists.txt
sdl3/libs/sdl_glue/interface/sdl_glue/: app.cppm  main.cxx
sdl3/libs/utils/: CMakeLists.txt
sdl3/libs/utils/include/utils/: defer.hpp
sdl3/libs/utils/interface/utils/: defer.cppm  main.cppm
sdl3/src/: CMakeLists.txt  app.cpp  app.cppm  app.cxx  app.hpp  main.cpp  main.cppm  test.cxx
sdl3/src/interfaces/: SdlApp.hpp
sdl3/src/shaders/: vertex.glsl
web/: .gitignore  biome.json  index.html  jsdoc_config.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json  vite.config.ts  vitest.browser.config.ts  vitest.config.ts
web/.storybook/: preview.ts
web/src/: main.ts  style.css
web/src/browser-utils/: dom.ts  idb.ts  positioning.ts  serialization.ts
web/src/components/: asset-library.ts  editable-dashboard.ts  editable-image.ts  index.ts  selectable-image.ts  themed-dialog.ts  user-collection.ts  window-header.ts  zoomable-view.ts
web/src/editable-layout/: common.ts  editable-pane.ts
web/src/event-handlers/: element-resizer.ts
web/src/layout-manager/: layout-context.ts  layout-element.ts  layout-manager.ts  layout-region.ts
web/src/modifiers/: mover.ts  resizer.ts
web/src/stories/: layout-element.stories.ts  layout-manager.stories.ts
web/src/utils/: common-types.ts  crypto.ts  geometry-2d.ts  serialization.ts  sniffer.ts  sync-chain.ts  sync-promise.ts
web/tests/browser-utils/: serialization.browser.test.ts
web/tests/utils/: geometry-2d.test.ts  serialization.browser.test.ts  serialization.test.ts  sync-chain.test.ts  sync-promise.test.ts
